@@ -66,13 +66,17 @@
 
     <target name="run_se" depends="init-common" xmlns:if="ant:if" xmlns:unless="ant:unless">
        <echo message="Running with ${embedded.classpath} in classpath"/>
-       <java  fork="on"
-              failonerror="true"
-              classpath="${assemble.dir}/${appname}-ejb.jar:${embedded.classpath}:${build.classes.dir}:${mvn.lib.dir}/reporter.jar"
-              classname="${se.client}">
+       <java fork="on"
+             failonerror="true"
+             modulepath="${env.S1AS_HOME}/lib/bootstrap"
+             classpath="${assemble.dir}/${appname}-ejb.jar:${embedded.classpath}:${build.classes.dir}:${mvn.lib.dir}/reporter.jar"
+             classname="${se.client}"
+         >
+           <jvmarg value="--add-modules" />
+           <jvmarg value="ALL-MODULE-PATH" />
            <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
-           <jvmarg value="--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED" />
-       	   <jvmarg value="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:9009" if:set="env.GLASSFISH_SUSPEND" />
+           <jvmarg value="--add-opens=java.naming/javax.naming.spi=org.glassfish.main.jdke" />
+           <jvmarg value="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:9009" if:set="env.GLASSFISH_SUSPEND" />
            <arg line="${jndiroot}"/>
         </java>
     </target>
